<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest02</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="server">SERVER</string>
    <string name="client">CLIENT</string>
    <string name="server_port">Server Port</string>
    <string name="connect">Connect</string>
    <string name="client_address">Client Address</string>
    <string name="client_port">Client Port</string>
    <string name="city">City</string>
    <string name="get_weather_forecast">Forecast</string>

    <string-array name="information_types">
        <item>temperature</item>
        <item>wind_speed</item>
        <item>condition</item>
        <item>pressure</item>
        <item>humidity</item>
        <item>all</item>
    </string-array>

</resources>